Fixed using some JDK11 API.
We're still running Java 8.